***********************************************************
**********| Version 2.0.8 - Released 2012-05-23 |**********
***********************************************************
 * fix wrong payment fee behavior after second selection of 
   RatePAY 

***********************************************************
**********| Version 2.0.7 - Released 2012-09-04 |**********
***********************************************************
 * fix payment fee
 * fix wrong email in creditmemo footer

***********************************************************
**********| Version 2.0.6 - Released 2012-03-05 |**********
***********************************************************
 * fix different behavior for article bundles

***********************************************************
**********| Version 2.0.5 - Released 2012-02-15 |**********
***********************************************************
 * fix wrong path for the rp footer image in the invoice
 * set the _canAuthorize Payment property to "false"
 * fix partial return bug

***********************************************************
**********| Version 2.0.4 - Released 2012-11-07 |**********
***********************************************************
 * changed default Theme to base Theme
 * fixed encryption constant Bug
 * fixed a bug, where you couldn't hide payment methods

***********************************************************
**********| Version 2.0.3 - Released 2012-10-23 |**********
***********************************************************
 * fix encryption UTF-8 Bug

***********************************************************
**********| Version 2.0.2 - Released 2012-09-26 |**********
***********************************************************
 * fix discount tax

***********************************************************
**********| Version 2.0.1 - Released xxxx-xx-xx |**********
***********************************************************

- add enterprise template support