@@ -24,7 +24,7 @@
 
     <modules>
         <PayIntelligent_Ratepay>
-            <version>2.0.8</version>
+            <version>2.0.9</version>
         </PayIntelligent_Ratepay>
     </modules>
 
