@@ -34,7 +34,7 @@
                     <fields>
 
                         <version translate="label">
-                            <label>v2.0.8</label>
+                            <label>v2.0.9</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -197,7 +197,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.0.8</label>
+                            <label>v2.0.9</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -380,7 +380,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.0.8</label>
+                            <label>v2.0.9</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
