@@ -1,5 +1,12 @@
 ***********************************************************
-**********| Version 2.0.8 - Released 2012-05-23 |**********
+**********| Version 2.0.9 - Released 2013-11-20 |**********
+***********************************************************
+ * remove bundle article from requests and send only the bundled items
+ * fix guest checkout elv data saving problem
+
+
+***********************************************************
+**********| Version 2.0.8 - Released 2013-05-23 |**********
 ***********************************************************
  * fix wrong payment fee behavior after second selection of 
    RatePAY 
